--- a/style.css
+++ b/style.css
@@ -48,17 +48,25 @@ a:hover {
     position: sticky;
     top: 0;
 
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-right: 25px;
+    margin-left: -50px;
+
+    padding: 50px;
 
     background-color: white;
 
-    animation: moveInAnimation ease 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    animation: addShadow linear both;
+    animation-timeline: scroll();
+	animation-range: 500px 600px;
 
     z-index: 1;
+}
+@keyframes addShadow {
+    0% {
+        box-shadow: none;
+    }
+    100% {
+        box-shadow: 5px 5px 5px silver;
+    }
 }
 
 #left-align {
@@ -75,6 +83,10 @@ a:hover {
     float: right;
     width: 75%;
     text-align: right;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 #banner {
