--- a/style.css
+++ b/style.css
@@ -105,16 +105,17 @@ a:hover {
     animation-fill-mode: forwards;
 
     margin-bottom: 600px;
+    margin-top: -75px;
 
     z-index: 2;
 }
 @keyframes fadeInAnimation {
     0% {
-        margin-top: 25px;
+        transform: translateY(100px);
         opacity: 0;
     }
     100% {
-        margin-top: -75px;
+        transform: translateY(0px);
         opacity: 1;
     }
 }
@@ -128,11 +129,14 @@ a:hover {
 
     position: absolute;
     top: 0;
-    left: 0;
+
+    width: 100%;
+    margin: 0 auto;
 
     min-height: 500px;
 
     display: flex;
+    justify-content: center;
     align-items: center;
 
     animation: minimize linear both;
@@ -179,6 +183,23 @@ a:hover {
     color: black;
 
     text-align: center;
+
+    view-timeline-name: --move-in-header;
+	view-timeline-axis: block;
+
+    animation: moveIn linear both;
+	animation-timeline: --move-in-header;
+	animation-range: entry 33% cover 50%;
+}
+@keyframes moveIn {
+    0% {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
 
 .nav-link {
