--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+a:not(.yt-link):not(.button):hover {
     text-decoration: underline;
 }
 
@@ -209,6 +209,18 @@ a:hover {
     margin: auto;
 }
 
+#yt-grid {
+    display: grid;
+    grid-template-columns: calc(50% - 10px) calc(50% - 10px);
+    grid-gap: 20px;
+}
+@media (max-width: 480px) {
+    #yt-grid {
+        grid-template-columns: 100%;
+        grid-gap: 40px;
+    }
+}
+
 #footer {
     text-align: center;
     
@@ -285,4 +297,70 @@ a:hover {
     
         padding: 20px;
     }
+}
+
+.yt-thumbnail {
+    width: 100%;
+    height: auto;
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+    margin-bottom: 0px;
+}
+
+.yt-link {
+    color: black;
+
+    text-decoration: none;
+}
+
+.yt-link:hover .yt-caption {
+    background-color: gainsboro;
+}
+
+.yt-caption {
+    background-color: whitesmoke;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+    margin-top: -30px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.yt-caption > p {
+    text-align: center;
+}
+
+.yt-title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.button-container {
+    width: 100%;
+
+    margin-top: 75px;
+    margin-bottom: 100px;
+
+    text-align: center;
+}
+
+.button {
+    color: white;
+    background-color: red;
+
+    font-weight: 500;
+
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.button:hover {
+    background-color: rgba(255, 0, 0, 0.6);
 }
