--- a/style.css
+++ b/style.css
@@ -361,6 +361,20 @@ a:not(.yt-link):not(.button):hover {
     border-radius: 20px;
 }
 
+.application-button {
+    width: calc((100% - 100px) * 0.3);
+    margin-right: calc((100% - 100px) * 0.05);
+    margin-left: -10px;
+
+    text-align: center;
+
+    display: inline-block;
+}
+
+.application-button:last-of-type {
+    margin-right: 0px;
+}
+
 .button:hover {
     background-color: rgba(255, 0, 0, 0.6);
 }
